# kdheepak.github.io

./: .envrc  .gitignore  .luarc.json  .nojekyll  .pdm.toml  .prettierrc  .prettierrc.mjs  404-listing.json  404.html  404.md  404.qmd  AGENTS.md  CNAME  LICENSE  Makefile  Manifest.toml  Pipfile  Project.toml  README.md  _common.qmd  _nb_header.html  _quarto.yml  astro.config.ts  convert-ipynb.py  environment.yml  fix-latex-symbol.py  index.html  index.md  index.qmd  index.xml  index.xsl  listings.json  package-lock.json  package.json  params.json  pelicanconf.py  pixi.toml  pnpm-lock.yaml  publishconf.py  pyproject.toml  (+11 more)
.github/: dependabot.yml
_astro/: ClientRouter.astro_astro_type_script_index_0_lang.CAqDO0tx.js  Footer.C3okfp87.css  SearchInitializer.astro_astro_type_script_index_0_lang.-uNEC6b6.js  SearchInitializer.astro_astro_type_script_index_0_lang.DN4QOb-R.js  ec.5o2s3.css  index.BRLZkoem.css  index.CJCnglyE.css  ui-core.BtZzFNcv.js  ui-core.Bzdqj9PL.js
_quarto/: alert.lua  fix-image-links.lua  foldcode.lua  font.html  ieee.csl  image-to-link.lua  index.xsl  inspect.lua  links-target-blank.lua  post-render.jl  pre-language-script.html  ref-section-level.lua  render.lua  section-prefix.lua  sidenote.lua  standard-code.lua  styles.css  svelte.lua  theme.scss  website.bib
about-me/: index.html
blog/: index-julia.xml  index.html  index.qmd  index.xml
blog/building-dashboards-using-panel-in-python/: index.html  index.ipynb  pyproject.toml
blog/building-dashboards-using-panel-in-python/src/movies_dashboard/: __init__.py
blog/pandas-vs-polars-vs-ibis/: index.html  index.ipynb  pyproject.toml
blog/pandas-vs-polars-vs-ibis/src/pandas_vs_polars_vs_ibis/: __init__.py
cache/: ArticlesGenerator-Readers  PagesGenerator-Readers
content/: .temperature.md.swp  01-raspberrypi-home-temperature-monitoring.md  02-tasker.md  03-tasker-google-maps.md  04-robotics.md  05-macosx-geektool.md  06-mac-tweaks.md  07-mac-apps.md  08-github-pelican.md  09-power.md  10-intro-to-vim.md  11-vim-tmux-zsh.md  12-git-ls.md  13-emacsclient.md  14-emacs-compile.md  15-emacs-workflow.md  16-emacsclient-tmux.md  17-pelican-linenumbers.md  18-homebrew.md  19-patched-fonts.md  20-custom-path-vim.md  21-spotify-tmux.md  22-reveal-github-pages.md  23-technical-writing.md  23-technical_writing.md  24-conda-package-manager.md  25-tmux-vim.md  android.md  blog.bib  custom-path-vim.md  draft.md  emacs_compile.md  emacs_workflow.md  emacsclient.md  emacsclient_tmux.md  gdb.md  github_pelican.md  homebrew.md  intro_to_vim.md  mac_apps.md  (+11 more)
css/: github.css  kudos.css  latex.css  pandoc.css  table.css  tufte-extra.css  tufte.css
cv/: index.html  index.md  index.qmd
src/data/blog/ibis-power-lines/: .gitignore  index.md  pyproject.toml
(+717 files in other folders)
