[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Dheepak Krishnamurthy", email = "me@kdheepak.com"},
]
dependencies = ["pandoc-fignos", "pandoc-secnos", "pandoc-eqnos", "pandoc-tablenos"]
requires-python = ">=3.9"
license = {text = "MIT"}

[tool.pdm]
allow_prereleases = true
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true
[tool.pdm.dev-dependencies]
dev = []

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
