[project]
name = "pandas-vs-polars-vs-ibis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ibis-framework[duckdb,examples,polars]>=9.3.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.5",
    "ipydatagrid>=1.3.2",
    "itables>=2.1.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
