[project]
name = "pandas-vs-polars-vs-ibis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ibis-framework[duckdb,examples,polars]>=9.3.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.5",
    "ipydatagrid>=1.3.2",
    "itables>=2.1.4",
]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
pandas-vs-polars-vs-ibis = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.12.*"
ipykernel = ">=6.29.5,<6.30"
pixi-kernel = ">=0.4.0,<0.5"
